[metadata]
name = hermes_core
author = Steven Christe
author_email = steven.christe@nasa.gov
license = Apache v2.0
license_file = LICENSE.rst
url = https://github.com/HERMES-SOC/hermes_core
description = A Python package to support the HERMES instrument packages.
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
  astropy>=4.1.0
  numpy>=1.16.0
  sunpy>=3.1.4
  ccsdspy


[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main


[options.extras_require]
dev =
    black
    flake8

test =
    tox
    pytest
    pytest-astropy
    pytest-cov
docs =
    sphinx
    sphinx-automodapi
    towncrier

[options.package_data]
hermes_core = data/*

[tool:pytest]
testpaths = "hermes_core/tests" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
remote_data_strict = True

[coverage:run]
omit =
  hermes_core/__init*
  hermes_core/conftest.py
  hermes_core/*setup_package*
  hermes_core/tests/*
  hermes_core/*/tests/*
  hermes_core/extern/*
  hermes_core/version*
  */hermes_core/__init*
  */hermes_core/conftest.py
  */hermes_core/*setup_package*
  */hermes_core/tests/*
  */hermes_core/*/tests/*
  */hermes_core/extern/*
  */hermes_core/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_

[flake8]
select = E101,E11,E111,E112,E113,E121,E122,E123,E124,E125,E126,E127,E128,E129,E131,E133,E20,E211,E231,E241,E242,E251,E252,E26,E265,E266,E27,E301,E302,E303,E304,E305,E306,E401,E402,E502,E701,E711,E712,E713,E714,E722,E731,E901,E902,F822,F823,W191,W291,W292,W293,W391,W601,W602,W603,W604,W605,W690
exclude = .txt, .rst, .md
